Make sure the header has some padding on mobile

--- a/main.css
+++ b/main.css
@@ -50,7 +50,8 @@ header {
 @media only screen and (max-width: 600px) {
 	header {
 		text-align: center;
-		padding-left: 0;
+		padding-left: 1em;
+		padding-right: 1em;
 	}
 }
 
